[tool.poetry]
name = "recipe-app"
version = "0.1.0"
description = "A website that creates beautiful recipes to print"
authors = ["Nicolas Neudeck <neudeck.nicolas@bcg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
